Adding javascript to website

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style.css">
+    
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="Header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -39,6 +41,14 @@
           <li>..: goes back one directory</li>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b "branch-name": creates a new branch and switches to it</li>
+            <h3>Saving branches to GitHub</h3>
+            <ul>
+              <li>Use command: "git add -A"</li>
+              <li>Use command: "git commit -m "description of update""</li>
+              <li>Use command: "git pull origin main"</li>
+              <li>Use command: "git push origin feature/"branch-name"</li>
+            </ul>
+
         </ul>
       </section>
    
@@ -53,5 +63,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
