--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Java has built in math functionality with the "Math" tool</li>
+          <li>A function can be called to at any point in the code</li>
         </ul>
       </section>
     </main>
